--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,37 @@
 </head>
 <body>
     <a href = "../index.html">Home</a>
-    
+    <br>
+    <br>
+    <img src="../img/lasagna.jpg" alt = "Lasagna" height = "310" width = "310">
+    <p>In this classic lasagna recipe, sheets of pasta are layered with a cheesy filling, a rich meaty tomato sauce, and more cheese and then baked until bubbly and browned.</p>
+    <p>While there are a few steps, this lasagna recipe is relatively easy to make and has so much flavor. Additionally, it uses simple ingredients that you likely have on hand, and it packs big flavor!
+    </p>
+    <p>Ingredients needed: </p>
+    <ul>
+        <li>Spices</li>
+        <li>Ricotta Cheese</li>
+        <li>Pasta Sauce</li>
+        <li>Beef and Sausage</li>
+        <li>Garlic</li>
+        <li>Egg</li>
+        <li>Lasagna</li>
+        <li>Onion</li>
+        <li>Tomato Paste</li>
+        <li>Parmesan</li>
+        <li>Parsley</li>
+        <li>Mozzarella</li>
+    </ul>
+    <p>While homemade lasagna may have a few steps, each step is easy –
+         and I assure you it’s worth the time; the perfect Italian meal!</p>
+    <ol>
+        <li>Boil pasta: In a large pot of salted water boil lasagna noodles per the recipe below.</li>
+        <li>Prepare meat sauce: Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce (I love this brand) & simmer it for a few minutes to thicken.
+        </li>
+        <li>Combine cheese mixture: Stir the cheese mixture together in a bowl.
+        </li>
+        <li>Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until the top of the lasagna is golden brown.
+        </li>
+    </ol>
 </body>
 </html>
