Add recipe for shakshuka, fix bugs

--- a/recipes/strawberry-lemon-blondies.html
+++ b/recipes/strawberry-lemon-blondies.html
@@ -8,7 +8,8 @@
 <body>
     <a href = ../index.html>Home</a>
     <br>
-    <img src = "../img/strawberrylemonblondies.webp">
+    <br>
+    <img src = "../img/strawberrylemonblondies.webp" alt = "Strawberry Lemon Blondies">
     <p>If you could only have one strawberry dessert this season, these fruity little strawberry bars would have to be the one, they’re ridiculously easy to throw together and completely irresistible…take it from me, I had my fork in one before I could finish my photo shoot. That’s always a sign of a good recipe! There’s nothing dry or crumbly about them, they melt in the mouth like a great blondie should. Only instead of nuts and chocolate you’ve got juicy strawberries and tart lemon. Yum.</p>
     <ul>
         <li>1 cup unsalted butter, at room temperature</li>
