--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href = "recipes/lasagna.html">Lasagna</a>
-    <br>
-    <a href = "recipes/strawberry-lemon-blondies.html">Strawberry Lemon Blondies</a>
-    <br>
-    <a href = "recipes/shakshuka.html">Shakshuka</a>
-
+    <ul>
+        <li><a href = "recipes/lasagna.html">Lasagna</a></li>
+        <br>
+        <li><a href = "recipes/strawberry-lemon-blondies.html">Strawberry Lemon Blondies</a></li>
+        <br>
+        <li><a href = "recipes/shakshuka.html">Shakshuka</a></li>
+    </ul>
 </body>
 </html>
